# libbloom

./: CMakeLists.txt
include/: bloom.h
src/: bloom.c
tests/: test_allocation.c  test_init_with_buffer.c
